--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
-# Compiled class file
-*.class
+nbproject/private
+build
+test
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+/dist/
+/Equipo29-Tema5/nbproject/private/
+/Equipo29-Tema5/dist/
